@@ -2,6 +2,14 @@
 This file is in the public domain.
 
 ==============================================================
+Luatex Release 0.89.4 was released 2016031100 
+==============================================================
+
+Intermediary release. Several bugs fixed.
+
+
+
+==============================================================
 Luatex Release 0.89.2 was released 2016022700 
 ==============================================================
 
